[project]
name = "triotp"
version = "0.2.1"
description = "The OTP framework for Python Trio"

authors = [
  {name = "David Delassus", email = "david.jose.delassus@gmail.com"},
]

readme = "README.rst"
license = {text = "MIT"}
keywords = ["trio", "async", "otp", "triotp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Trio",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]

requires-python = ">=3.10"
dependencies = [
  "trio>=0.19.0",
  "tenacity>=8.2.3",
  "Logbook>=1.7.0.post0",
  "trio-util>=0.7.0",
]

[project.urls]
homepage = "https://linkdd.github.io/triotp"
repository = "https://github.com/linkdd/triotp"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-trio>=0.7.0",
  "Sphinx>=7.2.6",
  "sphinx-rtd-theme>=2.0.0",
  "pytest-cov>=4.1.0",
  "black>=24.1.1",
  "mypy>=1.8.0",
  "coveralls>=3.3.1",
]
docs = [
  "toml>=0.10.2",
]

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = ["LICENSE.txt"]
