[project]
name = "triotp"
version = "0.3.1"
description = "The OTP framework for Python Trio"

authors = [
  {name = "David Delassus", email = "david.jose.delassus@gmail.com"},
]

readme = "README.rst"
license = {text = "MIT"}
keywords = ["trio", "async", "otp", "triotp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Trio",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]

requires-python = ">=3.13"
dependencies = [
  "trio>=0.29.0",
  "tenacity>=9.0.0",
  "Logbook>=1.8.1",
]

[project.urls]
homepage = "https://linkdd.github.io/triotp"
repository = "https://github.com/linkdd/triotp"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-trio>=0.8.0",
  "Sphinx>=8.2.3",
  "sphinx-rtd-theme>=3.0.2",
  "pytest-cov>=5.0.0",
  "black>=25.1.0",
  "mypy>=1.15.0",
  "coveralls>=3.3.1",
]
docs = [
  "toml>=0.10.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["LICENSE.txt", "src"]
excludes = ["tests"]